[tool.poetry]
name = "archivotron"
version = "0.0.0rc0"
description = "Scientific data archiving assistant"
authors = ["Joshua Teves <joshua.teves@nih.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8-2020 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
